fixed minor gap in promotions row

--- a/keen/web/static/css/promotions.css
+++ b/keen/web/static/css/promotions.css
@@ -2,6 +2,10 @@
     padding: 0 20px;
 }
 
+.promotions .row {
+    margin-left: -20px;
+}
+
 .promotions .promotions-list {
     /*padding: 80px 0 0 0;*/
     padding:0;
